--- a/views/admin/Categoriesadd.ejs
+++ b/views/admin/Categoriesadd.ejs
@@ -112,15 +112,17 @@
     <h3>add Categories</h3>
     <br>
     <br>
-    <form action="/addCategory" method="post">
+    <form action="/addCategory" method="post"  onsubmit="return validateForm()">
         <div class="mb-4">
             <label for="product_name" class="form-label">Name</label>
             <input type="text" placeholder="Type here" class="form-control" id="product_name" name="product_name" />
+            <span id="nameError" class="error"></span>
         </div>
       
         <div class="mb-4">
             <label class="form-label">Description</label>
             <textarea placeholder="Type here" class="form-control" id="product_description" name="product_description"></textarea>
+            <span id="descriptionError" class="error"></span>
         </div>
         <div class="d-grid">
             <button class="btn btn-primary" type="submit">Create category</button>
@@ -215,6 +217,32 @@
         });
     </script>
 
+
+<script>
+    function validateForm() {
+        var name = document.getElementById("product_name").value;
+        var description = document.getElementById("product_description").value;
+     
+        
+        if (name.trim() === '') {
+            document.getElementById("nameError").innerHTML = 'name cannot be empty';
+            document.getElementById("nameError").style.color = "red";
+            return false;
+        } else {
+            document.getElementById("nameError").innerHTML = '';
+            
+        }
+        if (description.trim() === '') {
+            document.getElementById("descriptionError").innerHTML = 'Description cannot be empty';
+            document.getElementById("descriptionError").style.color = "red";
+            return false;
+        } else {
+            document.getElementById("descriptionError").innerHTML = '';
+           
+        }
+        return true
+    }
+</script>
 </body>
 
 </html>
