--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -36,7 +36,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"> </a>
+                        <a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -91,7 +91,7 @@
                             </ul>
                         </div>
                         <div class="hearer_icon d-flex">
-                            <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
+                            <!-- <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a> -->
                             <a href=""><i class="ti-heart"></i></a>
                             <div class="dropdown ">
                                 <a class="dropdown" href="/cart" id="navbarDropdown3" role="button">
@@ -112,7 +112,7 @@
         <div class="search_input" id="search_input_box">
             <div class="container ">
                 <form class="d-flex justify-content-between search-inner">
-                    <input type="text" class="form-control" id="search_input" placeholder="Search Here">
+                    <!-- <input type="text" class="form-control" id="search_input" placeholder="Search Here"> -->
                     <button type="submit" class="btn"></button>
                     <span class="ti-close" id="close_search" title="Close Search"></span>
                 </form>
