--- a/views/user/singleproduct.ejs
+++ b/views/user/singleproduct.ejs
@@ -36,7 +36,7 @@
       <div class="row align-items-center">
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"> </a>
+            <a class="navbar-brand" href="#"> <img src="/img/logo.png" alt="logo"> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="menu_icon"><i class="fas fa-bars"></i></span>
@@ -48,48 +48,47 @@
               <ul class="navbar-nav">
 
 
+                <li class="nav-item dropdown">
+                  <a class="nav-link" href="/" id="navbarDropdown_1" role="button">
+                    Home
+                  </a>
+
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link" href="/shop" id="navbarDropdown_1" role="button">
+                    Shop
+                  </a>
+
+                </li>
+                <!-- data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" -->
+                <% if(locals.user) { %>
                   <li class="nav-item dropdown">
-                      <a class="nav-link" href="/" id="navbarDropdown_1" role="button">
-                          Home
-                      </a>
+                    <a class="nav-link " href="/logout" id="navbarDropdown_3" role="button">
+                      logout
+                    </a>
 
                   </li>
-                  <li class="nav-item dropdown">
-                      <a class="nav-link" href="/shop" id="navbarDropdown_1" role="button">
-                          Shop
+
+                  <% }else { %>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link " href="/login" id="navbarDropdown_3" role="button">
+                        login
                       </a>
 
-                  </li>
-                  <!-- data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" -->
-                  <% if(locals.user) { %>
+                    </li>
+
+                    <% } %>
+
                       <li class="nav-item dropdown">
-                          <a class="nav-link " href="/logout" id="navbarDropdown_3" role="button">
-                              logout
-                          </a>
+                        <a class="nav-link " href="/profile" id="navbarDropdown_2" role="button">
+                          Profile
+                        </a>
 
                       </li>
 
-                      <% }else { %>
-                          <li class="nav-item dropdown">
-                              <a class="nav-link " href="/login" id="navbarDropdown_3" role="button">
-                                  login
-                              </a>
 
-                          </li>
-
-                          <% } %>
-
-                              <li class="nav-item dropdown">
-                                  <a class="nav-link " href="/profile" id="navbarDropdown_2"
-                                      role="button">
-                                      Profile
-                                  </a>
-
-                              </li>
-
-                            
               </ul>
-          </div>
+            </div>
             <div class="hearer_icon d-flex">
               <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
               <a href=""><i class="ti-heart"></i></a>
@@ -176,17 +175,19 @@
                   <%= product.category.name %>
                 </a>
               </li>
-     <% if (product.stockQuantity <= 0){ %>
-              <li>
-                <a href="#" style="color: red;"> <span>Availibility</span   > : out of stocks</a>
-              </li>
-          <%  }else{ %>
-            <li>
-              <a href="#" style=" color: green;"> <span>Availibility</span> :stocks available</a>
-            </li>
-       <%   } %>
+              <% if (product.stockQuantity <=0){ %>
+                <li>
+                  <a href="#" style="color: red;"> <span>Availibility</span> : out of stocks</a>
+                </li>
+                <% }else{ %>
+                  <li>
+                    <a href="#" style=" color: green;"> <span>Availibility</span> :stocks available</a>
+                  </li>
+                  <% } %>
             </ul>
+            <input type="hidden" id="user" value="<%=user%>">
             <p>
+              
               First replenish living. Creepeth image image. Creeping can't, won't called.
               Two fruitful let days signs sea together all land fly subdue
             </p>
@@ -197,11 +198,11 @@
                 <span class="number-increment"> <i class="ti-plus"></i></span>
               </div> -->
               <!-- <a href="#" class="btn_3">add to cart</a> -->
-             
+
               <a href="#" class="add_cart"
-              onclick="addToCart('<%= product._id %>','<%= product.name %>','<%= product.price%>')">
-              + Add to Cart<i class=""></i>
-          </a>
+                onclick="addToCart('<%= product._id %>','<%= product.name %>','<%= product.price%>')">
+                + Add to Cart<i class=""></i>
+              </a>
             </div>
             </d iv>
           </div>
@@ -344,67 +345,89 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
     <script>
-        // Define your addToCart function
-        function addToCart(productId, productName, productPrice) {
-            // Show SweetAlert confirmation dialog
-            Swal.fire({
-                icon: 'question',
-                title: 'Add to Cart',
-                text: `Do you want to add ${productName} to your cart?`,
-                showCancelButton: true,
-                confirmButtonText: 'Yes',
-                cancelButtonText: 'No',
-            }).then((result) => {
-                if (result.isConfirmed) {
+      // Define your addToCart function
+      function addToCart(productId, productName, productPrice) {
+        let user = document.getElementById("user").value;
 
-                    // User clicked "Yes," add the item to the cart
-                    const quantity = 1; // You may get this from a form input
-                    fetch('/add-to-cart', {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/json',
-                        },
-                        body: JSON.stringify({
-                            productId, productName, productPrice, quantity
-                        }),
-                    })
-                        .then(response => response.json())
-                        .then(data => {
-                            if (data.success === false) {
-                                Swal.fire({
-                                    icon: 'info',
-                                    title: 'Info',
-                                    text: data.message,
-                                });
-                            } else {
-                                // Handle success response
-                                console.log(data.message);
-                                // Show success message
-                                Swal.fire({
-                                    icon: 'success',
-                                    title: 'Added to cart!',
-                                    text: `${productName} has been added to your cart.`,
-                                    showConfirmButton: false,
-                                    timer: 1500
-                                });
-                            }
-                        })
+        if (!user) {
+
+          Swal.fire({
+            icon: 'info',
+            title: 'Login Required',
+            text: 'Please login to add items to your cart.',
+            showCancelButton: true,
+            confirmButtonText: 'Login',
+            cancelButtonText: 'Cancel',
+          }).then((result) => {
+            if (result.isConfirmed) {
+              // Redirect user to login page or show login form
+              window.location.href = '/login'; // Replace '/login' with your actual login page URL
+            }
+          });
+          return; // Exit function to prevent further execution
 
 
-                        .catch(error => {
-                            console.error('Error adding to cart:', error);
-                            // Show error message
-                            Swal.fire({
-                                icon: 'error',
-                                title: 'Error',
-                                text: 'Failed to add the item to the cart. Please try again.',
-                            });
-                        });
-                } else {
-                    // User clicked "No," do nothing or show a different message
-                }
-            });
+
         }
+
+        Swal.fire({
+          icon: 'question',
+          title: 'Add to Cart',
+          text: `Do you want to add ${productName} to your cart?`,
+          showCancelButton: true,
+          confirmButtonText: 'Yes',
+          cancelButtonText: 'No',
+        }).then((result) => {
+          if (result.isConfirmed) {
+
+            // User clicked "Yes," add the item to the cart
+            const quantity = 1; // You may get this from a form input
+            fetch('/add-to-cart', {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json',
+              },
+              body: JSON.stringify({
+                productId, productName, productPrice, quantity
+              }),
+            })
+              .then(response => response.json())
+              .then(data => {
+                if (data.success === false) {
+                  Swal.fire({
+                    icon: 'info',
+                    title: 'Info',
+                    text: data.message,
+                  });
+                } else {
+                  // Handle success response
+                  console.log(data.message);
+                  // Show success message
+                  Swal.fire({
+                    icon: 'success',
+                    title: 'Added to cart!',
+                    text: `${productName} has been added to your cart.`,
+                    showConfirmButton: false,
+                    timer: 1500
+                  });
+                }
+              })
+
+
+              .catch(error => {
+                console.error('Error adding to cart:', error);
+                // Show error message
+                Swal.fire({
+                  icon: 'error',
+                  title: 'Error',
+                  text: 'Failed to add the item to the cart. Please try again.',
+                });
+              });
+          } else {
+            // User clicked "No," do nothing or show a different message
+          }
+        });
+      }
 
     </script>
 </body>
